[gd_scene load_steps=9 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/EnemyOverworld.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[sub_resource type="Animation" id=2]
resource_name = "FadeToNewRoom"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyOverworld/battlescene/AnimationPlayer/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyOverworld/battlescene/AnimationPlayer/Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 2 )]
position = Vector2( 80, 48 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.24 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Wall" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 160, 32 )

[node name="Wall2" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 128, 80 )

[node name="Wall3" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 112, 96 )

[node name="Wall4" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 96, 112 )

[node name="Wall5" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 80, 112 )

[node name="Wall6" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 64, 96 )

[node name="Wall7" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 32, 64 )

[node name="Wall8" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 48, 80 )

[node name="Wall9" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 48, 48 )

[node name="Wall10" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 48, 32 )

[node name="Wall11" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 80, 16 )

[node name="Wall12" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 64, 16 )

[node name="Wall13" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 112, 16 )

[node name="Wall14" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 96, 16 )

[node name="Wall15" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 144, 64 )

[node name="Wall16" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 160, 48 )

[node name="Wall17" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 144, 16 )

[node name="Wall18" parent="Node2D" instance=ExtResource( 3 )]
position = Vector2( 128, 16 )

[node name="EnemyOverworld" type="Area2D" parent="."]
position = Vector2( 152, 56 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="EnemyOverworld"]
position = Vector2( 0, -3.8147e-06 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyOverworld"]
position = Vector2( 0, -3.8147e-06 )
scale = Vector2( 0.2, 0.2 )
shape = SubResource( 1 )

[node name="battlescene" type="CanvasLayer" parent="EnemyOverworld"]
layer = 2

[node name="battle_scene" type="Control" parent="EnemyOverworld/battlescene"]
margin_left = 36.0
margin_top = 15.0
margin_right = 211.0
margin_bottom = 135.0
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="EnemyOverworld/battlescene"]
root_node = NodePath("../../..")
anims/FadeToNewRoom = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Fade" type="ColorRect" parent="EnemyOverworld/battlescene/AnimationPlayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Overlay" type="ColorRect" parent="."]
visible = false
margin_right = 257.0
margin_bottom = 145.0
color = Color( 0, 0, 0, 0.313726 )

[connection signal="body_entered" from="EnemyOverworld" to="." method="_on_EnemyOverworld_body_entered"]
[connection signal="input_event" from="EnemyOverworld" to="." method="_on_EnemyOverworld_input_event"]
